Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-4364

REFRESH does not pick up ALTER TABLE...PARTITION...SET LOCATION changes

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • Impala 2.6.0
    • Impala 4.0.0
    • Catalog

    Description

      AFAIK the REFRESH command should pick up all changes to a table made by ALTER TABLE from outside of Impala (e.g. Spark SQL), however REFRESH does not pick up changes from ALTER TABLE...PARTITION...SET LOCATION, which seems to require an INVALIDATE METADATA instead.

      Attachments

        Issue Links

          Activity

            People

              vihangk1 Vihang Karajgaonkar
              jbeard Jacob Evan Beard
              Votes:
              1 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: