common/thrift/ImpalaInternalService.thrift
@@ -438,6 +438,9 @@ struct TQueryOptions {
 
   // See comment in ImpalaService.thrift
   108: optional i32 max_fs_writers = 0;
+
+  // See comment in ImpalaService.thrift
+  109: optional bool refresh_updated_hms_partitions = false;
 }
 
 // Impala currently has two types of sessions: Beeswax and HiveServer2
